style.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;500;700&display=swap");

:root {
  --card-background-color: #fff;
  --very-dark-gray-blue: hsl(217, 19%, 35%);
  --dark-blue: hsl(214, 17%, 51%);
  --gray-blue: hsl(212, 23%, 69%);
  --light-gray-blue: hsl(210, 46%, 95%);
  --very-dark-gray-blue-transp: hsl(217, 19%, 35%, 0.95);
}

* {
  border: 0;
  padding: 0;
  margin: 0;
}

*,
*::before,
*::after {
  font-size: 62.5%;
  box-sizing: border-box;
}

.attribution {
  margin-top: 1rem;
  font-size: .9rem;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
  text-decoration: none;
  font-size: 0.8rem;
  color:#003333;
}

body {
  height: 100vh;
  font-family: Manrope, sans-serif;
  background-color: var(--light-gray-blue);
  color: var(--dark-blue);
  font-size: 1.3rem;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.card-container {
  display: flex;
  position: relative;
  justify-content: center;
  align-content: center;
}

.card {
  background-color: var(--card-background-color);
  align-self: center;
  max-width: 55rem;
  max-height: 25rem;
  height: 25rem;
  justify-content: space-between;
  display: flex;
  flex-direction: row;
  border-radius: 5px;
  overflow: hidden;
}

.card__img-container {
  flex: 1.3;
  display: flex;

  justify-content: stretch;
  align-items: center;
  overflow: hidden;
}

.card__image {
  height: 100%;
}

.card__info {
  flex: 2;
  display: flex;
  flex-direction: column;
  /* margin: 3rem; */
}

.card__title {
  margin: 3rem;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 1.5;
  color: var(--very-dark-gray-blue);
  margin-bottom: 1.3rem;
}

.card__description {
  margin: 0 3rem 0 3rem;

  font-size: 1.1rem;
  font-weight: 400;
  line-height: 1.8;
  margin-bottom: 1.5rem;
}

.card__bottom-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.user {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-right: auto;
  margin-left: 3rem;
}

.user__img {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
}

.user__data {
  margin-left: 1.5rem;
}

.user__data-name {
  font-size: 1rem;
  font-weight: 700;
  color: var(--very-dark-gray-blue);
}

.user__data-date {
  font-size: 1rem;
  font-weight: 400;
  color: var(--gray-blue);
}

.share-section__social {
  opacity: 0;
  display: none;
  transition: all 0.4 ease;
}

.share-section__social.active {
  opacity: 1;
  display: flex;
}

.share-section__button-share {
  width: 3rem;
  height: 3rem;
  margin-right: 3rem;
  background-color: var(--light-gray-blue);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.2 ease;
}

.share-section__button-share.active {
  transform: scale(0.96);
  background-color: var(--dark-blue);
}

.share-section__button-share.active path {
  fill: var(--light-gray-blue);
}

.share-section__social {
  position: absolute;
  display: flex;
  flex-direction: row;
  width: 20rem;
  transform: translate(-9rem, -10rem);
  align-items: center;
  justify-content: space-between;
  padding: 1rem 0 1rem 2.5rem;
  background-color: var(--very-dark-gray-blue);
  color: var(--light-gray-blue);
  border-radius: 10px;
  opacity: 0;
  display: none;
  transition: all 0.3 ease;
  z-index: 10;
}

.share-section__social.active {
  opacity: 1;
}

.share__icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 300px;
}

svg.share__social-icon {
  margin: 0 8px;
}

.share-section__social::after {
  content: "";
  width: 3rem;
  height: 3rem;
  background-color: var(--very-dark-gray-blue);
  position: absolute;
  transform: rotate(45deg) translateX(5.5rem) translateY(-4rem);
  z-index: -1;
}

.share__text {
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: 200;
  letter-spacing: 5px;
  font-weight: 200;
  margin-right: auto;
}

@media only screen and (max-width: 40em) {
  /*640px*/

  body {
    justify-content: center;
    align-items: center;
    font-size: 1.1rem;
  }
  .card {
    flex-direction: column;
    height: auto;
    max-width: 90%;
    max-height: 90%; /*50rem*/
    margin: auto;
    overflow: hidden;
    border-radius: 15px;
    align-self: center;
  }
  .card__image {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .card__img-container {
    height: 23rem;
  }

  .user.active {
    display: none;
  }
  .share-section {
    width: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .share-section__social {
    transform: translate(0, 0);
  }

  .share-section.active {
    display: flex;
    width: 100%;
    flex-direction: row-reverse;
    justify-content: space-between;
  }

  .share-section__social::after {
    display: none;
  }

  .share-section__social.active {
    position: relative;

    border-radius: 0;

    transform: translate(0, 0);
  }

  .card__bottom-container {
    padding-bottom: 0.5rem;
    background-color: var(--card-background-color);
  }

  .card__bottom-container.active {
    background-color: var(--very-dark-gray-blue);
  }

  .share-section__button-share {
    margin: 2rem;
  }

  .share-section__social.active {
    max-width: 70%;
  }
}

/*max-height 500px max-width 640px*/
@media only screen and (max-height: 31.25em) and (max-width: 40em) {
  body {
    height: auto;
  }

  .card-container {
    width: 80%;
    height: auto;
    margin: 10px;
  }

  .card__img-container {
    height: 15rem;
  }

  .card__image {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

